<resources>
    <string name="app_name">convertidorTemperatura</string>
    <string name="title">Temperature Converter</string>
    <string name="temp">Insert temperature</string>
    <string name="select">Select converter type</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>

    <string-array name="convert_options">
        <item>ºC to ºF</item>
        <item>ºC to ºK</item>
        <item>ºF to ºC</item>
        <item>ºF to ºK</item>
        <item>ºK to ºC</item>
        <item>ºK to ºF</item>
    </string-array>


</resources>